--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ uvicorn==0.24.0
 httpx==0.25.2
 pydantic==2.5.0
 python-dotenv==1.0.0
+
+# Frontend dependencies
+streamlit>=1.28.0
+requests>=2.31.0
